force-app/main/default/objects/DeliveryTerms__c/DeliveryTerms__c.object-meta.xml
<CustomObject>
    <label>Delivery Terms</label>
    <nameField>
        <label>Delivery Terms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Terms</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>