force-app/main/default/objects/DeliveryTerms__c/fields/NameUkr__c.field-meta.xml
<CustomField>
    <fullName>NameUkr__c</fullName>
    <label>Delivery Terms Name (Ukr)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>