force-app/main/default/objects/DeliveryTerms__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NameRus__c</columns>
    <columns>Incoterms__c</columns>
    <columns>ID_ERP__c</columns>
    <columns>NameUkr__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>